[project]
name = "snap7-db-sync"
version = "0.1.0"
description = "A high-performance bridge for syncing Siemens S7 DBs to Shared Memory"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "python-snap7",
]
authors = [
    { name = "Your Name", email = "your@email.com" }
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]